--- a/manifest.json
+++ b/manifest.json
@@ -1,43 +1,19 @@
 {
-  "name": "Harsh Online Shop",
-  "short_name": "Harsh Online",
+  "name": "Harsha App",
+  "short_name": "Harsha",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#000000",
+  "theme_color": "#ff8800",
+  "orientation": "portrait",
   "icons": [
     {
-      "src": "assets/icon-72.png",
-      "sizes": "72x72",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/icon-96.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/icon-128.png",
+      "src": "icon-128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "assets/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/icon-256.png",
-      "sizes": "256x256",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/icon-384.png",
-      "sizes": "384x384",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/icon-512.png",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
